--- a/cop/build.gradle
+++ b/cop/build.gradle
@@ -26,6 +26,10 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.3'
+
 }
 
 tasks.named('test') {
